apps/shoppingo/overlays/production/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shoppingo-production
  labels:
    name: shoppingo-production
