apps/shoppingo/overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: shoppingo-api
          image: 192.168.68.54:31834/shoppingo-api:0.1.4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: shoppingo-web
          image: 192.168.68.54:31834/shoppingo-web:0.1.4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-mongodb
spec:
  template:
    spec:
      containers:
        - name: shoppingo-mongodb
