apps/shoppingo/overlays/production/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingo-auth-ingress
  namespace: shoppingo-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: shoppingo.imapps.co.uk
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kivo
                port:
                  number: 3000
                namespace: kivo-production
