apps/shoppingo/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: shoppingo.imapps.co.uk
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kivo.kivo-production.svc.cluster.local
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shoppingo-api
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shoppingo-web
                port:
                  number: 80
